Fix text align in thank you state

--- a/interactive-rating-component-main/style.css
+++ b/interactive-rating-component-main/style.css
@@ -31,7 +31,7 @@
   margin-bottom: 2rem;
 }
 
-.appriciate {
+.appreciate {
   text-align: center;
 }
 
